--- a/src/components/Dropdown/dropdown.css
+++ b/src/components/Dropdown/dropdown.css
@@ -13,3 +13,10 @@
     border-radius: 50%;
     box-shadow: 5px 5px 10px;
 }
+
+@media screen and (max-width: 600px) {
+    .dropdown-container {
+        margin-top: -50vh !important;
+        margin-left: 20vw !important;
+    }
+}
