--- a/src/components/Welcome/welcome.css
+++ b/src/components/Welcome/welcome.css
@@ -1,7 +1,7 @@
 .text-holder {
     border: 4px solid var(--color-bg);
     border-radius: 10px;
-    width: 45vw;
+    width: 40vw;
     margin-top: 8vh !important;
 }
 
@@ -19,6 +19,11 @@
     align-self: flex-end !important;
 }
 
+.background_image {
+    width: 45vw;
+    border-radius: 20px;
+}
+
 @media screen and (max-width: 600px) {
     .text-holder {
         width: 80vw;
@@ -34,5 +39,13 @@
 
     .input-container {
         margin-top: -5vh;
+    }
+
+    .left-and-right {
+        flex-direction: column !important;
+    }
+
+    .background_image {
+        width: 75vw !important;
     }
 }
